--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,8 +14,13 @@
   "dependencies": {
     "axios": "^1.4.0",
     "ejs": "^3.1.9",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "node": "^20.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "3.0.1"
   }
+
 }
